--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # NEVER commit .env to version control
 
 # Flask configuration
-FLASK_APP=run.py
+FLASK_APP=apiserver/run.py
 FLASK_ENV=development
 
 # Security
