Refactor environment configuration and update README for clarity

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,24 @@
 # Environment configuration template
 # Copy this file to .env and update with your values
 # NEVER commit .env to version control
+#
+# Note: .env files are for LOCAL DEVELOPMENT ONLY
+# Production environments should set these variables through their hosting platform
 
-# Flask configuration
+# Flask CLI configuration
 FLASK_APP=apiserver/run.py
-FLASK_ENV=development
 
-# Security
+# Flask debug mode (enables debugger, auto-reload, detailed errors)
+# Set to 0 or false in production
+FLASK_DEBUG=1
+
+# Application security
+# CRITICAL: MUST be changed to a strong random key in production!
 SECRET_KEY=your-secret-key-change-this
 
-# Database
+# Database connection
+# Development uses SQLite file, production should use PostgreSQL or similar
 SQLALCHEMY_DATABASE_URI=sqlite:///logbook.db
+
+# Testing mode (uncomment to use in-memory database for tests)
+# TESTING=true
